[gd_scene load_steps=2 format=3 uid="uid://cldq8psmv2p4b"]

[ext_resource type="Script" path="res://ui/MissionPanel.gd" id="1_8h4k2"]

[node name="MissionPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8h4k2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ðŸ“‹ Misiones"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="MainContainer/HeaderContainer"]
layout_mode = 2
text = "0/0"
horizontal_alignment = 2

[node name="CloseButton" type="Button" parent="MainContainer/HeaderContainer"]
layout_mode = 2
text = "âœ•"

[node name="TabContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="DailyTab" type="Button" parent="MainContainer/TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Diarias"

[node name="WeeklyTab" type="Button" parent="MainContainer/TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Semanales"

[node name="ContentScroll" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MissionList" type="VBoxContainer" parent="MainContainer/ContentScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FooterContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="RefreshTimer" type="Label" parent="MainContainer/FooterContainer"]
layout_mode = 2
text = "Reset en: 00:00"

[node name="StreakLabel" type="Label" parent="MainContainer/FooterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Racha: 0"
horizontal_alignment = 2
